@@ -142,6 +142,9 @@ default module =
 ; url prefix - set prefix to provided urls (/metrics)
 ;url prefix = /example
 
+; kill already running exporters based on path and args
+;kill orphaned = enabled
+
 
 [/settings/NRPE/server]
 ; port - Port to use for NRPE.
@@ -181,6 +184,9 @@ use ssl = ${/settings/WEB/server/use ssl}
 
 ; url prefix - set prefix to provided urls (/metrics)
 url prefix = /node
+
+; kill already running exporters based on path and args
+kill orphaned = enabled
 
 
 [/settings/Prometheus/server]
@@ -244,6 +250,9 @@ use ssl = ${/settings/WEB/server/use ssl}
 
 ; url prefix - set prefix to provided urls (/metrics)
 url prefix = /node
+
+; kill already running exporters based on path and args
+kill orphaned = enabled
 
 
 ; Builtin plugins settings - General settings for the builtin plugins
